Added containerization with kafka and zookeeper